# Mino-Dice-Prob-Calc-Web

./: Cargo.toml  LICENSE  README.md  Trunk.toml  benchmark.md  index.html  mino_dice_rule.md  probability_model.md  roadmap.md
.github/: copilot-instructions.md
.github/skills/test-driven-development/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
examples/: benchmark_6p_static_vs_dynamic.rs  benchmark_dp_vs_monte_carlo.rs  build_probability_sqlite_db.rs  compare_trick_distribution.rs  showcase_3p_3dice.rs  showcase_trick_distribution.rs
src/: api.rs  chart.rs  dice.rs  lib.rs  main.rs  round.rs  simulation.rs  trick.rs  ui.rs
src/round/: mod.rs  tests.rs
static/: index.html
