[package]
name = "mino-dice-prob-calc"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window", "Document", "Element", "HtmlCanvasElement",
  "console", "Event", "EventTarget", "MouseEvent",
  "HtmlInputElement", "Node", "DomTokenList"
] }
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
plotters = { version = "0.3", default-features = false, features = ["line_series", "histogram"] }
plotters-canvas = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
